--- a/src/templates/club_base.html
+++ b/src/templates/club_base.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css_js/club_base_style.css">
+    <link rel="stylesheet" href="/css_js/club_base_style.css">
     <title></title>
 </head>
 <body>
-
 <div class="container">
 
 
-    <!-- кнопка клуба + кубки клуба + кликабельно-->
+    <!-- "Клуб" + "Опыт клуба" -->
     <nav>
         <div class="logo-container">
             <span class="site-name">{% block club_name %}{% endblock %}</span>
@@ -45,7 +44,7 @@
     {% block href_main %}{% endblock %}
 
 
-    <!-- "Участники" надпись -->
+    <!-- "Участники" -->
     <div class="card"
          style="margin-top: 40px;left: 20px;height: 50px; width: 350px; justify-content: center; display: flex">
         <h1 style="font-size: 20px;position: relative; z-index: 2">Участники</h1>
