--- a/src/templates/club_user.html
+++ b/src/templates/club_user.html
@@ -47,13 +47,14 @@
   display: flex;
   justify-content: center;
   align-items: center;">
+    <!-- Никнейм и роль участника в клубе -->
     <h1 style="font-size: 12px; color: #7a9a8a;flex-basis: 35%;display: flex;justify-content: center;align-items: center;position: relative; z-index: 2">
         {{ user.username }}
     </h1>
     <h1 style="font-size: 12px; color: #7a9a8a;flex-basis: 20%;display: flex;justify-content: center;align-items: center;position: relative; z-index: 2">
         {{ user.role }}
     </h1>
-
+    <!-- Если страницу открыл админ, то он может выгонять участников -->
     {% if user_info.role == "admin" and user.role == "member" %}
     <h1 style="flex-basis: 20%"></h1>
     <button type="button" class="Kick" id="Kick_{{ user.user_id }}"
@@ -61,7 +62,7 @@
             onclick="Kick('{{user.user_id}}')">Выгнать
     </button>
     <h1 style="flex-basis: 5%"></h1>
-
+    <!-- Если страницу открыл лидер, он может выгонять всех, повышать учасников -->
     {% elif user_info.role == "owner" and user.role == "member" %}
     <button type="button" class="Promote" id="Update_{{ user.user_id }}"
             style="font-size: 10px;height: 20px; width: 60px;  flex-basis: 20%;display: flex;justify-content: center;align-items: center;"
@@ -72,7 +73,7 @@
             onclick="Kick('{{user.user_id}}')">Выгнать
     </button>
     <h1 style="flex-basis: 5%"></h1>
-
+    <!-- Если страницу открыл лидер, он может выгонять всех, понижать админов -->
     {% elif user_info.role == "owner" and user.role == "admin" %}
     <button type="button" class="Demote" id="Update_{{ user.user_id }}"
             style="font-size: 10px;height: 20px; width: 60px;  flex-basis: 20%;display: flex;justify-content: center;align-items: center;"
@@ -83,10 +84,8 @@
             onclick="Kick('{{user.user_id}}')">Выгнать
     </button>
     <h1 style="flex-basis: 5%"></h1>
-
     {% else %}
     <h1 style="flex-basis: 45%"></h1>
-
     {% endif %}
 </div>
 {% endfor %}
