--- a/src/templates/history_base.html
+++ b/src/templates/history_base.html
@@ -10,11 +10,11 @@
 <div class="container">
 
 
-    <!-- Блок "Назад" + "Магазин" + "История" -->
+    <!-- "Назад" + "Магазин" + "История" -->
     {% block nav %}{% endblock %}
 
 
-    <!-- "История" -->
+    <!-- "История" + информация о прошедших покупках -->
     {% block hist %}{% endblock %}
 
 
