--- a/src/static/css_js/history_base_style.css
+++ b/src/static/css_js/history_base_style.css
@@ -1,12 +1,15 @@
 body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     margin: 0;
     padding: 0;
     font-size: 16px;
     font-family: Arial, sans-serif;
+    background: #ededed;
 }
 
 .container {
-    background: #ededed;
     max-width: 390px;
 }
 
