--- a/src/static/css_js/profile_base_style.css
+++ b/src/static/css_js/profile_base_style.css
@@ -1,10 +1,18 @@
-
 body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     margin: 0;
     padding: 0;
     font-size: 16px;
     font-family: Arial, sans-serif;
+    background: #ededed;
 }
+
+.container {
+    max-width: 390px;
+}
+
 
 .experience-bar { /* Шкала опыта*/
     position: relative;
